Fix language switch height on mobile

--- a/en_GB/assets/stylesheets/application.css
+++ b/en_GB/assets/stylesheets/application.css
@@ -8685,7 +8685,8 @@ input[type="color"]:focus,
   top: 8px;
   right: 20px; }
   .language-switch img {
-    width: 40px; }
+    width: 40px;
+    height: auto; }
 
 .clearfix {
   *zoom: 1; }
